@@ -151,6 +151,7 @@ map<string, detector> cad_det_factory::loadDetectors()
 					string style        = e.attribute("style").toStdString();
 					string position     = e.attribute("position").toStdString();
 					string rotation     = e.attribute("rotation").toStdString();
+					string mfield       = e.attribute("mfield").toStdString();
 
 					// assigning attributes to volume
 					if(dets.find(volumeName) != dets.end()) {
@@ -223,7 +224,12 @@ map<string, detector> cad_det_factory::loadDetectors()
 							cout << " mother: " << mother ;
 							dets[volumeName].mother = mother;
 						}
-						
+						if(mfield != "") {
+							if(verbosity>3)
+								cout << " mfield: " << mfield ;
+							dets[volumeName].magfield = mfield;
+						}
+
 						if(verbosity>3)
 						cout << endl;
 					}
